--- a/package.json
+++ b/package.json
@@ -3,21 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
+    "migrate": "node scripts/migrate.js",
     "prestart": "node scripts/create-database.js && npm run migrate",
     "start": "nodemon index.js",
+    "pretest": "node scripts/create-database.js test && npm run migrate test",
     "lint": "eslint .",
-    "migrate": "node scripts/migrate.js",
     "test": "mocha tests/**/*.js --exit --recursive --timeout 60000 --file ./tests/test-setup.js",
-    "pretest": "node scripts/create-database.js test",
     "posttest": "node scripts/drop-database.js"
   },
   "dependencies": {
     "express": "^4.18.2",
     "pg": "^8.10.0",
-    "postgres-migrations": "5.3.0"
+    "postgres-migrations": "^5.3.0"
   },
   "devDependencies": {
-    "chai": "^5.0.0",
+    "chai": "^4.3.7",
     "dotenv": "^16.0.3",
     "eslint": "^8.36.0",
     "mocha": "^10.2.0",
